Try to fix closeAllDatabases SERVER-5101 SERVER-4947 SERVER-5072